Refactor architecture to support microservices with separate databases and inter-service REST communication